# c-labs

./: CMakeLists.txt  main.c  tasks.h
data/: task6.txt  task7_1.txt  task7_3.txt  task7_5.txt
tasks/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task8.cpp  task9.c
tasks/task7/: task3_rework.c  task4_rework.c  task5_rework.c  task7_1.c  task7_2.c  task7_3.c  task7_4.c  task7_5.c
tasks/task8/: task8_1.cpp  task8_2.cpp  task8_3.cpp  task8_4.cpp
